# summer_homework

./: README.md
camera/asset/result/: dist1.txt  mtx1.txt  ret1.txt
camera/src/: Camera_calibration.py  camera_biaoding.py  get_images.py
detect_and_predict/: CMakeLists.txt
detect_and_predict/include/: armor.hpp  client.hpp  data.hpp  get_armor.hpp  handle_algorithm.hpp  kalman.hpp  number_classifier.hpp  pnp.hpp  pose.hpp  server.hpp
detect_and_predict/src/: client.cpp  get_armor.cpp  handle_algorithm.cpp  kalman.cpp  main.cpp  number_classifier.cpp  pnp.cpp  pose.cpp  server.cpp
fourier/src/: main.cpp
kalman_filter/: CMakeLists.txt
kalman_filter/draw/: 1.py  2.py  3.py
kalman_filter/include/: kalman.hpp
kalman_filter/src/: 1.md  kalman.cpp  main.cpp
pnp_slove/: CMakeLists.txt
pnp_slove/include/: armor.hpp
pnp_slove/src/: armor.cpp  pnp_solve.cpp
transform/include/: pose.hpp
transform/src/: main.cpp  pose.cpp
